# jasmin-auth-django

./: .gitignore  MANIFEST.in  README.md  setup.cfg  setup.py
jasmin_auth/: __init__.py  admin.py  admin_site.py  apps.py  decorators.py  handlers.py  helpers.py  middleware.py  settings.py  signals.py  urls.py  views.py
jasmin_auth/static/admin/css/: permission_denied.css
jasmin_auth/templates/admin/: base_site.html  permission_denied.html
jasmin_auth/templates/admin/auth/user/: change_form.html
jasmin_auth/templates/jasmin_auth/: oauth_error.html
jasmin_auth_django_admin/: admin.py  apps.py  settings.py
jasmin_auth_django_admin/static/admin/css/: oauth.css
jasmin_auth_django_admin/templates/admin/: oauth_error.html  permission_denied.html
