[metadata]
name = jasmin-auth-django
description = Provides utilities for authenticating Django sites using JASMIN accounts.
long_description = file: README.md
author = Matt Pryor
author_email = matt.pryor@stfc.ac.uk
url = https://github.com/cedadev/jasmin-auth-django


[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    django
    django-settings-object
    requests-oauthlib
